--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test": "run-p lint test:*"
+    "test": "run-p lint test:unit"
   },
   "dependencies": {
     "buefy": "^0.8.8",
