--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^2.0.0-alpha.1",
+    "autoprefixer": "9",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^7.0.0-alpha.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "7",
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~3.5.3"
   }
 }
