--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-property-decorator": "^10.0.0-rc.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "@types/jest": "^24.0.11",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-cypress": "^4.0.0",
