Update actions file

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -17,6 +20,15 @@ jobs:
         node-version: '14'
     - run: yarn install
     - run: yarn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - run: yarn install
     - run: yarn build
     # - name: Install dependencies
     #   uses: borales/actions-yarn@v2.0.0
