--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,25 +23,10 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - run: yarn install
     - run: yarn build
-    # - name: Install dependencies
-    #   uses: borales/actions-yarn@v2.0.0
-    #   with:
-    #     cmd: install # yarn install
-    # - name: Install dependencies
-    #   uses: borales/actions-yarn@v2.0.0
-    #   with:
-    #     cmd: test # yarn test
-    # - name: Build
-    #   uses: borales/actions-yarn@v2.0.0
-    #   with:
-    #     cmd: build # yarn build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
