--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -15,18 +18,15 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '14'
-    - name: Install dependencies
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install # yarn install
-    - name: Install dependencies
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: test # yarn test
-    - name: Build
-      uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: build # yarn build
+    - run: yarn install
+    - run: yarn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    steps:
+    - run: yarn build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
