--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,11 @@ jobs:
     needs: test
     if: github.ref == 'refs/heads/main'
     steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - run: yarn install
     - run: yarn build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
